--- a/timesheet-front/package.json
+++ b/timesheet-front/package.json
@@ -28,7 +28,8 @@
     "react-loading-skeleton": "^3.4.0",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
