--- a/timesheet-front/package.json
+++ b/timesheet-front/package.json
@@ -12,7 +12,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.1",
-    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query-devtools": "^5.40.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
